Minor changes for card width. First, I used flex-shrink: 0 and flex-wrap: 1 (I think 1 is equal to wrap and therefore it worked). Later, I used only flex-wrap and removed flex-shrink and the growing of the card worked correctly as I wanted. I need to know WHY because I had to use flex-grow: 1 rather than flex-wrap (my mistake) but it worked anyway. Now desktop.sass is useless due to mentioned changes.

--- a/style/desktop.sass
+++ b/style/desktop.sass
@@ -1,2 +1,4 @@
-.card
-    max-width: 375px
+// .card
+//     max-width: 375px
+//     flex-shrink: 0
+//     flex-wrap: 1
